app/styles/app.css
/* ... */
.form-control-secondary:focus,.form-control-secondary:active{background-color:#fff;color:#484848;border:1px solid #fff;}
.form-control-label-secondary{color:#95CAFF;margin-bottom:0.375rem;}


/* 16. Navbar */
.navbar{padding:0!important;height:70px;}
.navbar-expand{width:85%;}
.navbar-nav{margin-top:15px;}
.nav-link{width:100%;}
.navbar-expand .navbar-nav .nav-link{padding:12px 13px;}


/* 21. Cards */
.card-default{background-color:#fff;padding:35px;overflow:hidden;/*width:100%;*/border:1px solid #fff;-webkit-box-shadow:0px 0px 25px 0px rgba(0,0,0,0.08);-moz-box-shadow:0px 0px 25px 0px rgba(0,0,0,0.08);box-shadow:0px 0px 25px 0px rgba(0,0,0,0.08);border-radius:0;}
a.card:hover{text-decoration:none;}
.card-wrapper{list-style:none;padding-left:0;}
.pro-wrap{font-family:'Lato',sans-serif;max-width:1180px;color:#080809;background-color:#fff;padding:35px;font-weight:300;}
.pro-actions-wrap{max-width:1180px;padding:0px;}
div.pro-avatar img{max-width:58px;}
.pro-card-name{font-size:1.0rem;font-weight:600;}
.pro-card-domain-name{font-size:0.8rem;color:#2C96FF;}
.pro-card-body{display:block;margin-bottom:30px;font-size:0.9rem;}
.pro-container{padding-top:1.5rem;}
.list-card {margin-bottom:0;list-style:none;padding:0;color: #19191A;text-decoration: none;}

/* 26. Alerts */
.alert .close {line-height: 20px;}

/* 27. Progress bars */
.progress{font-size: .75rem;line-height: 1rem;text-align: center;}
.progress-bar{height: 1rem;color: #fff;background-color: #2275d7}
.progress-bar-animated{-webkit-animation:progress-bar-stripes 1s linear infinite;-o-animation:progress-bar-stripes 1s linear infinite;animation:progress-bar-stripes 1s linear infinite}
.progress-bar-striped{background-image:-webkit-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);background-image: linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);-webkit-background-size: 1rem 1rem;background-size: 1rem 1rem}


/* 28. List group */
.list-group-item:last-child,.list-group-item:first-child{border-radius:0;}
.list-group-item.active,.list-group-item.active:hover,.list-group-item.active:focus{background-image:none;}
.item-sidebar-primary{font-size:0.75rem;font-weight:700;text-transform:uppercase;padding:1.0625rem 1.375rem;border:none;color:#2C96FF;background-color:#fff;border:1px solid #fff;margin-bottom:1px;-webkit-transition:all .2s ease-in-out;-moz-transition:all .2s ease-in-out;-ms-transition:all .2s ease-in-out;-o-transition:all .2s ease-in-out;transition:all .2s ease-in-out;}
.list-group-item.item-sidebar-primary:hover,.item-sidebar-primary.active,.item-sidebar-primary.active:focus,.item-sidebar-primary.active:hover{background-color:#2C96FF;color:#fff;cursor:pointer;border:1px solid #2C96FF;}

/* 29. Image */
.img-cover {object-fit: cover;}
div.avatar-sm img{padding:0;width:48px;height:48px;}
div.avatar-md img{padding:0;width:58px;height:58px;}

/* 36. Status Bars */
.statusBar-link,.statusBar-link:hover,.statusBar-link:focus,.statusBar-link:active{display:block;padding:2px 12px;color:#e6e6e6;text-align:center;margin-left:8px;margin-right:8px;}
.statusBar-link:hover{background-color:rgba(148,148,148,0.1);-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;}
.status-bar{width:100%;height:34px;display:inline-block;font-family:'Lato',sans-serif;font-size:13px;font-weight:400;padding:4px 30px;}
.status-bar a,.status-bar a:hover,.status-bar a:focus,.status-bar a:active{text-decoration:none;}
.status-bar-icon{vertical-align:middle;font-size:19px!important;padding-right:8px;margin-top:-2px!important;}
/* --- Status Bars variants --- */
.status-bar-light{background-color:#fff;}
.status-bar-light > a{color:#080809;}
.status-bar-dark{background-color:#2A2D31;}
.status-bar-dark > a{color:#e6e6e6;}
.status-bar-gray{background-color:#F0F0F0;border-bottom:1px solid #E6E6E6;}
.status-bar-gray > a{color:#080809;}
.status-bar-transparent-light,.status-bar-transparent-light > a{background-color:rgba(0,0,0,0);color:#e6e6e6;}
.status-bar-transparent-dark,.status-bar-transparent-dark > a{background-color:rgba(255,255,255,0);color:#080809;}
.status-inline{display:inline-block;}
.status-completion{margin-right:15px;vertical-align:top;margin-top:-1px;}
.status-profile-img{width:22px;height:22px;vertical-align:top;}
.status-complete-wrap{line-height:0px;}
.status-complete-object{background-color:red;width:19px;height:19px;font-family:'Source Code Pro',monospace;padding-top:10px;padding-left:6px;color:#fff;}
.status-complete-dot{padding:10px;vertical-align:middle;}
div.status-inline.status-balance > p{padding:7px 10px;vertical-align:middle;}
/* --- Status bar tooltip arrow --- */
.popover.bottom>.arrow{left:50%;margin-left:-11px;border-top-width:0;border-bottom-color:#fff;top:-11px;}
.popover>.arrow{border-width:11px;}
.popover>.arrow,.popover>.arrow:after{position:absolute;display:block;width:0;height:0;border-color:rgba(0,0,0,0);border-style:solid;}
*,:after,:before{box-sizing:border-box;}
div{display:block;}
.popover{position:absolute;top:0;left:0;z-index:1060;display:none;max-width:276px;padding:1px;letter-spacing:normal;line-break:auto;line-height:1.42857143;text-align:left;text-align:start;text-decoration:none;text-shadow:none;text-transform:none;white-space:normal;word-break:normal;word-spacing:normal;word-wrap:normal;font-size:14px;background-color:#fff;background-clip:padding-box;border:1px solid #fff;border-radius:6px;box-shadow:0 5px 30px rgba(0,0,0,.2);}
*,:after,:before{box-sizing:border-box;}
/* ... */

